# neural-networks

./: .gitignore  playground.ipynb  pyproject.toml
micrograd/: engine.py  main.py  nn.py  test.py
test/: test_engine.py
