[project]
name = "neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ruff>=0.15.13",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "notebook>=7.5.6",
]
